Resolve issue on mobile devices for flex item in pokedex entry

--- a/src/components/pokedex-entry/pokedex-entry.css
+++ b/src/components/pokedex-entry/pokedex-entry.css
@@ -32,8 +32,7 @@
 
 /* 3: number of items in the row */
 .pokedex-entry__item {
-  display: flex;
-  justify-content: center;
+  display: block;
   flex-basis: calc(95% / 3);
 }
 
